--- a/Examenes/Proyecto/index.html
+++ b/Examenes/Proyecto/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<script type="text/javascript" src="./js/servicios/apiClient.js"></script>
-		<script type="text/javascript" src="./js/pages/page.js"></script>
-		<script type="text/javascript" src="./js/pages/loginPage.js"></script>
-		<script type="text/javascript" src="./js/pages/crearCuenta.js"></script>
-		<script type="text/javascript" src="./js/pages/innerPage.js"></script>
-		<script type="text/javascript" src="./js/pages/homePage.js"></script>
-		
-		<script type="text/javascript" src="./js/main.js"></script>
-		
-		<script type="text/javascript" src="./js/controller/navigationController.js"></script>
-		<link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<title> ::: Proyecto Final :::</title>
-	</head>
-	<body>
-		<h1>Proyecto Final</h1>
 
+<head>
+    <meta charset="utf-8">
 
-	</body>
+    <script type="text/javascript" src="./js/servicios/userApiClient.js"></script>
+    <script type="text/javascript" src="./js/servicios/apiClient.js"></script>
+    
+    <script type="text/javascript" src="./js/pages/page.js"></script>
+    <script type="text/javascript" src="./js/pages/loginPage.js"></script>
+    <script type="text/javascript" src="./js/pages/crearCuenta.js"></script>
+    <script type="text/javascript" src="./js/pages/innerPage.js"></script>
+    <script type="text/javascript" src="./js/pages/homePage.js"></script>
+    <script type="text/javascript" src="./js/pages/comidasPage.js"></script>
+    <script type="text/javascript" src="./js/pages/bebidasPage.js"></script>
+    <script type="text/javascript" src="./js/pages/usuarioPage.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/controller/navigationController.js"></script>
+    <script type="text/javascript" src="./js/controller/userController.js"></script>
+    
+
+    <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title> ::: Proyecto Final :::</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
