--- a/Examenes/Proyecto/index.html
+++ b/Examenes/Proyecto/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
+        <script type="text/javascript" src="./js/servicios/apiClient.js"></script>
+        <script type="text/javascript" src="./js/commons/sesionController.js"></script>
+        <script type="text/javascript" src="./js/commons/removeEventListener.js"></script>
+        <script type="text/javascript" src="./js/commons/modal.js"></script>
+        <script type="text/javascript" src="./js/servicios/userApiClient.js"></script>
+        <script type="text/javascript" src="./js/servicios/comidaApiClient.js"></script>
+        <script type="text/javascript" src="./js/servicios/bebidaApiClient.js"></script>
+        <script type="text/javascript" src="./js/pages/page.js"></script>
+        <script type="text/javascript" src="./js/pages/loginPage.js"></script>
+        <script type="text/javascript" src="./js/pages/crearCuenta.js"></script>
+        <script type="text/javascript" src="./js/pages/innerPage.js"></script>
+        <script type="text/javascript" src="./js/pages/homePage.js"></script>
+        <script type="text/javascript" src="./js/pages/comidasPage.js"></script>
+        <script type="text/javascript" src="./js/pages/bebidasPage.js"></script>
+        <script type="text/javascript" src="./js/pages/usuarioPage.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/controller/navigationController.js"></script>
+        <script type="text/javascript" src="./js/controller/userController.js"></script>
+        <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <script type="text/javascript" src="./node_modules/highcharts/highcharts.js"></script>
+        <script type="text/javascript" src="./node_modules/highcharts/modules/exporting.js"></script>
+        <title> ::: Proyecto Final :::</title>
+    </head>
 
-    <script type="text/javascript" src="./js/servicios/userApiClient.js"></script>
-    <script type="text/javascript" src="./js/servicios/apiClient.js"></script>
-    
-    <script type="text/javascript" src="./js/pages/page.js"></script>
-    <script type="text/javascript" src="./js/pages/loginPage.js"></script>
-    <script type="text/javascript" src="./js/pages/crearCuenta.js"></script>
-    <script type="text/javascript" src="./js/pages/innerPage.js"></script>
-    <script type="text/javascript" src="./js/pages/homePage.js"></script>
-    <script type="text/javascript" src="./js/pages/comidasPage.js"></script>
-    <script type="text/javascript" src="./js/pages/bebidasPage.js"></script>
-    <script type="text/javascript" src="./js/pages/usuarioPage.js"></script>
-    <script type="text/javascript" src="./js/main.js"></script>
-    <script type="text/javascript" src="./js/controller/navigationController.js"></script>
-    <script type="text/javascript" src="./js/controller/userController.js"></script>
-    
-
-    <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title> ::: Proyecto Final :::</title>
-</head>
-
-<body>
-
-</body>
+    <body>
+    </body>
 
 </html>
